# bothros

./: .gitignore  .zenodo.json  LICENSE  README.md  RELEASE_NOTES_v0.1.0.md  WEIGHTS_LICENSE  pyproject.toml  requirements-lock.txt
docs/: BENCHMARKS.md  DECISIONS.md  METHODOLOGY.md  MODEL_CARD_DETECTOR.md  MODEL_CARD_LA.md  MODEL_CARD_LB.md
eval/: README.md  eval_classifier_oracle.py  eval_utils.py
eval/heldout/: la_oracle.json
examples/: README.md
scripts/: download_weights.py  push_to_hf.py  setup_hf_collection.py
src/bothros/: __init__.py  __main__.py  lb_class_to_reading.json  pipeline.py
