[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bothros"
version = "0.1.0"
description = "Aegean sign reading from photographs (Linear A + Linear B)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jamie MacDonald" }]
keywords = ["linear-a", "linear-b", "aegean", "epigraphy", "ocr", "computer-vision"]
dependencies = [
    "torch>=2.1",
    "timm>=1.0",
    "ultralytics>=8.3",
    "pillow>=10",
    "numpy>=1.24",
    "opencv-python>=4.8",
    "huggingface_hub>=0.23",
]

[project.urls]
Homepage = "https://github.com/jmacdonald263/bothros"
Weights = "https://huggingface.co/JMacD263/bothros"

[project.scripts]
bothros = "bothros.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
